--- a/DiaryApp/tasks.json
+++ b/DiaryApp/tasks.json
@@ -1,30 +1,27 @@
-{
-  "01/09/2023": [
-    {
-      "Title": "Vynes koš",
-      "Description": "Vynes koš ty kkte"
-    },
-    {
-      "Title": "Call Status",
-      "Description": "Byznis moc peníze"
-    }
-  ],
-  "01/10/2023": [
-    {
-      "Title": "Vstát",
-      "Description": "Vsát žeo"
-    }
-  ],
-  "01/16/2023": [
-    {
-      "Title": "Vstát",
-      "Description": "Vsát žeo"
-    }
-  ],
-  "01/15/2023": [
-    {
-      "Title": "Nevim",
-      "Description": "delat neco"
-    }
-  ]
-}
+[
+  {
+    "Date": "01/16/2023",
+    "Title": "Vynes koš",
+    "Description": "Vynes koš ty kkte"
+  },
+  {
+    "Date": "01/09/2023",
+    "Title": "Call Status",
+    "Description": "Byznis moc peníze"
+  },
+  {
+    "Date": "01/10/2023",
+    "Title": "Vstát",
+    "Description": "Vsát žeo"
+  },
+  {
+    "Date": "01/16/2023",
+    "Title": "Vstát",
+    "Description": "Vsát žeo"
+  },
+  {
+    "Date": "01/15/2023",
+    "Title": "Nevim",
+    "Description": "delat neco"
+  }
+]
