--- a/DiaryApp/tasks.json
+++ b/DiaryApp/tasks.json
@@ -1,26 +1,26 @@
 [
   {
-    "Date": "01/16/2023",
+    "Date": "2023-01-16",
     "Title": "Vynes koš",
     "Description": "Vynes koš ty kkte"
   },
   {
-    "Date": "01/09/2023",
+    "Date": "2023-01-09",
     "Title": "Call Status",
     "Description": "Byznis moc peníze"
   },
   {
-    "Date": "01/10/2023",
+    "Date": "2023-01-10",
     "Title": "Vstát",
     "Description": "Vsát žeo"
   },
   {
-    "Date": "01/16/2023",
+    "Date": "2023-01-16",
     "Title": "Vstát",
     "Description": "Vsát žeo"
   },
   {
-    "Date": "01/15/2023",
+    "Date": "2023-01-15",
     "Title": "Nevim",
     "Description": "delat neco"
   }
