--- a/DiaryApp/tasks.json
+++ b/DiaryApp/tasks.json
@@ -2,7 +2,7 @@
   {
     "Date": "2023-01-16",
     "Title": "Vynes koš",
-    "Description": "Vynes koš ty kkte"
+    "Description": "Vynes koš"
   },
   {
     "Date": "2023-01-09",
